--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1 class="best-browser-thing">The most freakiest browser<span class="dot">.</span></h1>
         <small><p class="good-way">(In a good way)</p></small>
         <a class="download" href="https://github.com/Freakybob-Team/freakybrowse/releases/latest">Download Latest</a>
-    <img src="Images/FreakyBrowse site gif - Made with Clipchamp.gif" class="image-main">
+    <img src="images/main.gif" class="image-main">
     <h1 class="a2">FreakyBrowse</h1>
     <h1 class="made-by">A Browser made by the Freakybob Team.</h1>
 </div>
@@ -49,11 +49,11 @@
 </div>
 <div class="photo-info-or-smth">
 <h2 class="search-freak">Search anything you want using <a href="https://search.freakybob.site">FreakySearch</a></h2>
-<img src="Images/using-freakysearch.gif" class="search-freak-gif">
+<img src="images/using-freakysearch.gif" class="search-freak-gif">
 <h2 class="search-google">Or maybe you want to use <a href="https://google.com">Google?</a> Don't worry, we have both</h2>
-<img src="Images\using-googlesearch.gif" class="google-gif">
+<img src="images\using-googlesearch.gif" class="google-gif">
 <h2 class="notes">You can make notes and download them</h2>
-<img src="Images/notes.gif" class="notes-gif">
+<img src="images/notes.gif" class="notes-gif">
 <h2 class="so-much-more">And so much more...</h2>
 </div>
 <div id="download"></div>
