--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     Latest</a>
             </div>
             <div class="hero-image">
-                <img src="images/main.png" class="image-main" alt="FreakyBrowse Browser Demo">
+                <img src="images/main.png" class="image-main" alt="FreakyBrowse wow">
                 <h2 class="hero-title">FreakyBrowse</h2>
                 <p class="made-by">A Browser made by the Freakybob Team.</p>
             </div>
@@ -75,7 +75,7 @@
                     <p>placeholder text wow</p>
                 </div>
                 <div class="feature-media">
-                    <img src="images/using-elvira.png" class="feature-gif" alt="Using FreakySearch">
+                    <img src="images/using-elvira.png" class="feature-gif" alt="Using elvira">
                 </div>
             </div>
         </div>
